fix margin in header-info on small screen

--- a/src/styles/_header-info.scss
+++ b/src/styles/_header-info.scss
@@ -16,3 +16,9 @@
     margin: 0 0 80px;
   }
 }
+
+@media (max-width: $small-screen-breakpoint) {
+  .header-info {
+    margin: auto ;
+  }
+}
