--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -33,7 +33,7 @@
   .nav {
     flex-direction: column;
     justify-content: center;
-    margin: 20px auto 0;
+    margin: 20px auto 10px;
 
     &__list {
       max-width: 150px;
